# Hyper-Summ

./: .gitignore  README.md  SUMMARY_DISPLAY_README.md  add_summary_display.py  add_textrank_execution.py  improve_tfidf.py  project.ipynb  project_report.txt
data/: enhanced_articles.json
docs/: Parallelized Text Sumarization PDC Term Project Proposel (1).docx
scripts/: add_networkx_install.py  add_textrank.py  check_cells.py  create_enhanced_dataset.py  create_proper_structure.py  fix_cell.py  fix_dataset.py  fix_notebook.py  fix_tfidf_par.py  fix_tfidf_seq.py  glt_approach_builder.py  optimize_parallel.py  reorganize_notebook.py
text-summarizer-ui/: .gitignore  app.py  main.py  pyproject.toml  requirements.txt  summarizers.py
text-summarizer-ui/static/css/: style.css
text-summarizer-ui/static/js/: app.js
text-summarizer-ui/templates/: index.html
