[project]
name = "text-summarizer-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "networkx==3.2.1",
    "nltk==3.8.1",
    "numpy==1.26.2",
    "psutil==5.9.6",
    "scikit-learn==1.3.2",
]
